# gatsby-dynamic-api-test

./: .gitignore
product-api/: pyproject.toml
product-api/product_api/: main.py
product-web/: gatsby-config.ts  gatsby-node.ts  package-lock.json  package.json
product-web/src/templates/: product.tsx
