[tool.poetry]
name = "product-api"
version = "0.1.0"
description = ""
authors = ["David <25187726+david-shortman@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.0"
uvicorn = "^0.23.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
